<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_nothing_release"
            android:checkable="true"
            android:title="@string/range"/>
        <item android:id="@+id/nav_messages"
            android:icon="@drawable/ic_userpage_contribute"
            android:checkable="true"
            android:title="@string/report"/>
        <item android:id="@+id/nav_friends"
            android:icon="@drawable/ic_userpage_service"
            android:checkable="true"
            android:title="@string/scan"/>
        <item android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_userpage_reportby"
            android:checkable="true"
            android:title="@string/report"/>
    </group>

    <item android:title="Sub items">
        <menu>
            <item android:icon="@drawable/ic_service_voucher_bg"
                android:checkable="true"
                android:title="Sub item 1"/>
            <item android:icon="@drawable/ic_userpage_reputation"
                android:checkable="true"
                android:title="Sub item 2"/>
        </menu>
    </item>
</menu>